--- a/fontbakery/googlefonts-NotoSansLycian-report.html
+++ b/fontbakery/googlefonts-NotoSansLycian-report.html
@@ -73,38 +73,35 @@
             </tr>
             <tr>
                 <td>0</td>
-                <td>0</td>
-                <td>6</td>
-                <td>111</td>
+                <td>3</td>
+                <td>5</td>
+                <td>118</td>
                 <td>7</td>
-                <td>103</td>
+                <td>113</td>
             </tr>
             <tr>
                 <td>0%</td>
-                <td>0%</td>
-                <td>4%</td>
+                <td>2%</td>
+                <td>3%</td>
                 <td>66%</td>
                 <td>4%</td>
-                <td>61%</td>
+                <td>63%</td>
             </tr>
             </table>
             
 <p><strong>Note:</strong> The following loglevels were omitted in this report: SKIP, INFO, PASS, DEBUG</p>
-<h2>&lt;Section: Google Fonts&gt; ⚠️⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩ℹ️ℹ️ℹ️ℹ️ℹ️</h2>
+<h2>&lt;Section: Google Fonts&gt; 🔥⚠️⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩ℹ️ℹ️ℹ️ℹ️ℹ️</h2>
 <h3>Ensure fonts have ScriptLangTags declared on the 'meta' table.</h3>
 <div>Check ID: &lt;FontBakeryCheck:com.google.fonts/check/meta/script_lang_tags&gt;</div>
 
 <details><summary>⚠️ <strong>fonts/NotoSansLycian/googlefonts/ttf/NotoSansLycian-Regular.ttf</strong></summary><div><ul><li class='details_item'><span class='details_indicator'>⚠️ WARN</span><span class='details_text'><p>This font file does not have a 'meta' table. [code: lacks-meta-table]</p>
 </span></li></ul></div></details>
-<h2>&lt;Section: Universal&gt; ⚠️⚠️⚠️⏩⏩⏩⏩ℹ️ℹ️</h2>
-<h3>Check font contains no unreachable glyphs</h3>
-<div>Check ID: &lt;FontBakeryCheck:com.google.fonts/check/unreachable_glyphs&gt;</div>
+<h3>Noto fonts must have an ARTICLE.en_us.html file</h3>
+<div>Check ID: &lt;FontBakeryCheck:com.google.fonts/check/description/noto_has_article&gt;</div>
 
-<details><summary>⚠️ <strong>fonts/NotoSansLycian/googlefonts/ttf/NotoSansLycian-Regular.ttf</strong></summary><div><ul><li class='details_item'><span class='details_indicator'>⚠️ WARN</span><span class='details_text'><p>The following glyphs could not be reached by codepoint or substitution rules:</p>
-<pre><code>- uni00A0.1
-</code></pre>
-<p>[code: unreachable-glyphs]</p>
+<details><summary>🔥 <strong>fonts/NotoSansLycian/googlefonts/ttf/NotoSansLycian-Regular.ttf</strong></summary><div><ul><li class='details_item'><span class='details_indicator'>🔥 FAIL</span><span class='details_text'><p>This is a Noto font but it lacks an ARTICLE.en_us.html file [code: missing-article]</p>
 </span></li></ul></div></details>
+<h2>&lt;Section: Universal&gt; 🔥🔥⚠️⚠️⏩⏩⏩⏩⏩ℹ️ℹ️</h2>
 <h3>Check if each glyph has the recommended amount of contours.</h3>
 <div>Check ID: &lt;FontBakeryCheck:com.google.fonts/check/contour_count&gt;</div>
 
@@ -116,14 +113,29 @@
 
 - Glyph name: aogonek	Contours detected: 3	Expected: 2 
 
-- And Glyph name: uogonek	Contours detected: 2	Expected: 1
+- Glyph name: uogonek	Contours detected: 2	Expected: 1
 </code></pre>
 <p>[code: contour-count]</p>
 </span></li></ul></div></details>
 <h3>Ensure dotted circle glyph is present and can attach marks.</h3>
 <div>Check ID: &lt;FontBakeryCheck:com.google.fonts/check/dotted_circle&gt;</div>
 
-<details><summary>⚠️ <strong>fonts/NotoSansLycian/googlefonts/ttf/NotoSansLycian-Regular.ttf</strong></summary><div><ul><li class='details_item'><span class='details_indicator'>⚠️ WARN</span><span class='details_text'><p>No dotted circle glyph present [code: missing-dotted-circle]</p>
+<details><summary>🔥 <strong>fonts/NotoSansLycian/googlefonts/ttf/NotoSansLycian-Regular.ttf</strong></summary><div><ul><li class='details_item'><span class='details_indicator'>🔥 FAIL</span><span class='details_text'><p>No dotted circle glyph presentand font uses a complex shaper [code: missing-dotted-circle-complex]</p>
+</span></li></ul></div></details>
+<h3>Ensure soft_dotted characters lose their dot when combined with marks that replace the dot.</h3>
+<div>Check ID: &lt;FontBakeryCheck:com.google.fonts/check/soft_dotted&gt;</div>
+
+<details><summary>🔥 <strong>fonts/NotoSansLycian/googlefonts/ttf/NotoSansLycian-Regular.ttf</strong></summary><div><ul><li class='details_item'><span class='details_indicator'>🔥 FAIL</span><span class='details_text'><p>The dot of soft dotted characters used in orthographies must disappear in the following strings: į̀ į́ į̂ į̃ į̄ į̌</p>
+<p>The dot of soft dotted characters should disappear in other cases, for example: į̆ į̇ į̈ į̊ į̋ į̒ į̦̀ į̦́ į̦̂ į̦̃ į̦̄ į̦̆ į̦̇ į̦̈ į̦̊ į̦̋ į̦̌ į̦̒ į̧̀ į̧́ [code: soft-dotted]</p>
+</span></li></ul></div></details>
+<h3>Check math signs have the same width.</h3>
+<div>Check ID: &lt;FontBakeryCheck:com.google.fonts/check/math_signs_width&gt;</div>
+
+<details><summary>⚠️ <strong>fonts/NotoSansLycian/googlefonts/ttf/NotoSansLycian-Regular.ttf</strong></summary><div><ul><li class='details_item'><span class='details_indicator'>⚠️ WARN</span><span class='details_text'><p>The most common width is 572 among a set of 6 math glyphs.
+The following math glyphs have a different width, though:</p>
+<p>Width = 322:
+minus
+[code: width-outliers]</p>
 </span></li></ul></div></details>
 <h2>&lt;Section: Outline Correctness Checks&gt; ⚠️⚠️</h2>
 <h3>Are any segments inordinately short?</h3>
@@ -150,7 +162,7 @@
 
 * W (U+0057) contains a short segment B&lt;&lt;468.0,577.5&gt;-&lt;463.0,600.0&gt;-&lt;461.0,609.0&gt;&gt; 
 
-* And 64 more.
+* 63 more.
 </code></pre>
 <p>Use -F or --full-lists to disable shortening of long lists. [code: found-short-segments]</p>
 </span></li></ul></div></details>
@@ -160,7 +172,7 @@
 <details><summary>⚠️ <strong>fonts/NotoSansLycian/googlefonts/ttf/NotoSansLycian-Regular.ttf</strong></summary><div><ul><li class='details_item'><span class='details_indicator'>⚠️ WARN</span><span class='details_text'><p>The following glyphs have jaggy segments:</p>
 <pre><code>* u1029C (U+1029C): B&lt;&lt;258.5,231.5&gt;-&lt;266.0,197.0&gt;-&lt;273.0,165.0&gt;&gt;/L&lt;&lt;273.0,165.0&gt;--&lt;273.0,714.0&gt;&gt; = 12.33908727832618 
 
-* And u1029C (U+1029C): L&lt;&lt;354.0,714.0&gt;--&lt;354.0,163.0&gt;&gt;/B&lt;&lt;354.0,163.0&gt;-&lt;360.0,197.0&gt;-&lt;369.0,230.5&gt;&gt; = 10.007979801441312 [code: found-jaggy-segments]
+* u1029C (U+1029C): L&lt;&lt;354.0,714.0&gt;--&lt;354.0,163.0&gt;&gt;/B&lt;&lt;354.0,163.0&gt;-&lt;360.0,197.0&gt;-&lt;369.0,230.5&gt;&gt; = 10.007979801441312 [code: found-jaggy-segments]
 </code></pre>
 </span></li></ul></div></details>
                     </body>
