--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 			<div class="container-fluid">
 				<span class="navbar-text">
 					As at
-					<a href="https://github.com/notofonts/lycian/commit/ebd5550
-"><code>ebd5550
+					<a href="https://github.com/notofonts/lycian/commit/1e9e778
+"><code>1e9e778
 </code></a>
 				</span>
 				<div class="mx-auto order-0">
@@ -68,6 +68,22 @@
 				
 				<h4>Noto Sans Lycian</h4>
 				<div class="row align-items-start"><ul>
+<li class="li-0">unhinted<ul>
+<li class="li-1">otf<ul>
+<li><a href="fonts/NotoSansLycian/unhinted/otf/NotoSansLycian-Regular.otf"> NotoSansLycian-Regular.otf</a></li>
+ </ul>
+<li class="li-1">ttf<ul>
+<li><a href="fonts/NotoSansLycian/unhinted/ttf/NotoSansLycian-Regular.ttf"> NotoSansLycian-Regular.ttf</a></li>
+ </ul>
+ </ul>
+<li class="li-0">full<ul>
+<li class="li-1">otf<ul>
+<li><a href="fonts/NotoSansLycian/full/otf/NotoSansLycian-Regular.otf"> NotoSansLycian-Regular.otf</a></li>
+ </ul>
+<li class="li-1">ttf<ul>
+<li><a href="fonts/NotoSansLycian/full/ttf/NotoSansLycian-Regular.ttf"> NotoSansLycian-Regular.ttf</a></li>
+ </ul>
+ </ul>
 <li class="li-0">hinted<ul>
 <li class="li-1">ttf<ul>
 <li><a href="fonts/NotoSansLycian/hinted/ttf/NotoSansLycian-Regular.ttf"> NotoSansLycian-Regular.ttf</a></li>
@@ -76,16 +92,6 @@
 <li class="li-0">googlefonts<ul>
 <li class="li-1">ttf<ul>
 <li><a href="fonts/NotoSansLycian/googlefonts/ttf/NotoSansLycian-Regular.ttf"> NotoSansLycian-Regular.ttf</a></li>
- </ul>
- </ul>
-<li class="li-0">full<ul>
-<li class="li-1">ttf<ul>
-<li><a href="fonts/NotoSansLycian/full/ttf/NotoSansLycian-Regular.ttf"> NotoSansLycian-Regular.ttf</a></li>
- </ul>
- </ul>
-<li class="li-0">unhinted<ul>
-<li class="li-1">ttf<ul>
-<li><a href="fonts/NotoSansLycian/unhinted/ttf/NotoSansLycian-Regular.ttf"> NotoSansLycian-Regular.ttf</a></li>
  </ul>
  </ul>
  </ul></div>
@@ -105,26 +111,34 @@
 
 				<ul>
 										<li>
-						<a href="fontbakery/googlefonts-NotoSansLycian-report.html">FontBakery Report (Google Fonts)</a>
+						<a href="fontbakery/notofonts-NotoSansLycian-googlefonts-report.html">FontBakery Report (Google Fonts)</a>
 					</li>
 									</ul>
 
 				<ul>
 									</ul>
-				
+
 				<h3>Proof sheets</h3>
 				<ul>
 					<li>
-						<a href="proof/glyphs.html">All glyphs</a>
+						Glyphs:
+							<a href="proof/NotoSansLycian/Regular-diffbrowsers_glyphs.html">Regular</a> 
 					</li>
 					<li>
-						<a href="proof/text.html">Sample text</a>
+						Text:
+							<a href="proof/NotoSansLycian/Regular-diffbrowsers_text.html">Regular</a> 
 					</li>
 					<li>
-						<a href="proof/waterfall.html">Waterfall test</a>
+						Waterfall:
+							<a href="proof/NotoSansLycian/Regular-diffbrowsers_waterfall.html">Regular</a> 
+					</li>
+					<li>
+						Proofer:
+							<a href="proof/NotoSansLycian/Regular-diffbrowsers_proofer.html">Regular</a> 
 					</li>
 				</ul>
-			</div>
+
+							</div>
 		</div>
 	</body>
 </html>
